--- a/preprocessing/package.json
+++ b/preprocessing/package.json
@@ -4,6 +4,7 @@
     "main": "generate-html.js",
     "dependencies": {
         "del": "^6.0.0",
+        "fs-extra": "^11.1.1",
         "gulp": "^4.0.2",
         "gulp-if": "^3.0.0",
         "gulp-inject": "^5.0.5",
